[package]
name = "msim-macros"
version = "0.1.0"
edition = "2021"
authors = ["IOTA Stiftung"]
description = "Mysten sim's proc-macro."
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/iota-sim"
license = "Apache-2.0"
categories = ["asynchronous"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.14"
proc-macro2 = "1"
quote = "1"
syn = "1"
