[package]
name = "tokio"
version = "1.39.2"
edition = "2021"
authors = ["IOTA Stiftung"]
description = "The `tokio` simulator on msim."
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/iota-sim"
categories = ["asynchronous", "network-programming", "simulation"]
keywords = ["io", "async", "non-blocking", "futures", "simulator"]
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

full = [
  "fs",
  "io-util",
  "io-std",
  "macros",
  "net",
  "parking_lot",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
]

fs = ["real_tokio/fs"]
io-util = ["real_tokio/io-util"]
io-std = ["real_tokio/io-std"]
macros = ["real_tokio/macros"]
net = ["real_tokio/net"]
parking_lot = ["real_tokio/parking_lot"]
process = ["real_tokio/process"]
rt = ["real_tokio/rt"]
rt-multi-thread = ["real_tokio/rt-multi-thread"]
signal = ["real_tokio/signal"]
sync = ["real_tokio/sync"]
time = ["real_tokio/time"]
test-util = ["real_tokio/test-util"]
tracing = ["real_tokio/tracing"]
bytes = ["real_tokio/bytes"]
libc = ["real_tokio/libc"]
mio = ["real_tokio/mio"]
signal-hook-registry = ["real_tokio/signal-hook-registry"]
socket2 = ["real_tokio/socket2"]
tokio-macros = ["real_tokio/tokio-macros"]

[target.'cfg(msim)'.dependencies]
msim.path = "../msim"

[dependencies]
tracing = "0.1"

real_tokio = { git = "ssh://git@github.com/iotaledger/tokio-madsim-fork.git", branch = "main", package = "real_tokio", features = ["full"] }
bytes = { version = "1.7" }
futures = { version = "0.3", features = ["async-await"] }
mio = { version = "1.0" }
