[package]
name = "msim"
version = "0.1.0"
edition = "2021"
authors = ["IOTA Stiftung"]
description = "Deterministic Simulator for distributed systems."
readme = "../README.md"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/iota-sim"
license = "Apache-2.0"
keywords = ["distributed-systems", "async", "deterministic", "simulation"]
categories = ["asynchronous", "simulation"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["macros"]
macros = ["msim-macros", "tokio/macros"]

[dependencies]
bytes = "1.7"
futures = "0.3"
lazy_static = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
msim-macros = { version = "0.1", path = "../msim-macros", optional = true }
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
pin-project-lite = "0.2"
tap = "1.0"

[build-dependencies]
cc = { version = "1.1" }

[target.'cfg(msim)'.dependencies]
ahash = "0.8"
downcast-rs = "1.2"
libc = "0.2"
naive-timer = "0.2"
tokio = { git = "https://github.com/iotaledger/tokio-madsim-fork.git", branch = "main", package = "real_tokio", features = ["full"] }
tokio-util = { git = "https://github.com/iotaledger/tokio-madsim-fork.git", branch = "main", features = ["full"] }
toml = "0.8"
socket2 = "0.5"
erasable = "1.2"
async-task = "4.7"

[dev-dependencies]
anyhow = "1.0.71"
criterion = "0.5"
structopt = "0.3"
tokio = { git = "https://github.com/iotaledger/tokio-madsim-fork.git", branch = "main", package = "real_tokio", features = ["full"] }

[package.metadata.docs.rs]
# all-features = true
rustc-args = ["--cfg", "msim"]
rustdoc-args = ["--cfg", "msim", "--cfg", "docsrs"]
